--- a/WEB-INF/src/cn/com/bhh/erp/action/ProductAction_zh_CN.properties
+++ b/WEB-INF/src/cn/com/bhh/erp/action/ProductAction_zh_CN.properties
@@ -1,7 +1,7 @@
 product_category_tree=\u4ea7\u54c1\u5206\u7c7b\u6811
 nonModel=\u6682\u65f6\u6ca1\u6709\u6b64\u7c7b\u4ea7\u54c1
 btn_list=\u5217\u8868
-message.product.model=\u4ea7\u54c1\u578b\u53f7
+message.product.model=\u4ea7\u54c1
 
 product.model=\u4ea7\u54c1\u578b\u53f7
 product.producerId=\u5236\u9020\u5546
@@ -39,15 +39,41 @@ product.administratorLcd=\u7ba1\u7406\u5458\u6db2\u6676\u663e\u793a
 product.administratorInput=\u7ba1\u7406\u5458\u64cd\u4f5c\u8f93\u5165
 product.operationSystem=\u64cd\u4f5c\u7cfb\u7edf
 
+product.status=\u72B6\u6001
+product.title=\u4ea7\u54c1\u5217\u8868
+product.id=\u5546\u54C1ID
+product.title=\u5546\u54C1\u540D\u79F0
+product.zone=\u5730\u57DF
+product.price=\u4EF7\u683C
+product.value=\u9762\u503C
+product.operator=\u8FD0\u8425\u5546
+product.status=\u72B6\u6001
+product.opuser=\u64CD\u4F5C\u4EBA
+product.optime=\u64CD\u4F5C\u65F6\u95F4
+product.delistreason=\u4E0B\u67B6\u539F\u56E0
+
+slist=\u4E0A\u67B6
+sdelist=\u4E0B\u67B6
+sadd=\u65B0\u589E
+schange=\u8C03\u4EF7
+
 list.product.label.title=\u4ea7\u54c1\u5217\u8868
 list.product.label.productCategory=\u4ea7\u54c1\u5206\u7c7b
 list.product.label.productCategory.name=\u5206\u7c7b\u540d\u79f0\uff1a
 list.product.label.productCategory.description=\u5206\u7c7b\u63cf\u8ff0\uff1a
 list.product.label.deleted=\u5df2\u5220\u9664
 list.product.label.notDeleted=\u672a\u5220\u9664
-list.product.table.model=\u4ea7\u54c1\u578b\u53f7
-list.product.table.producer=\u751f\u4ea7\u5382\u5bb6
-list.product.table.deleted=\u5220\u9664\u6807\u8bb0
+list.product.table.id=\u5546\u54C1ID
+list.product.table.title=\u5546\u54C1\u540D\u79F0
+list.product.table.zone=\u5730\u57DF
+list.product.table.price=\u4EF7\u683C
+list.product.table.value=\u9762\u503C
+list.product.table.operator=\u8FD0\u8425\u5546
+list.product.table.status=\u72B6\u6001
+list.product.table.opuser=\u64CD\u4F5C\u4EBA
+list.product.table.optime=\u64CD\u4F5C\u65F6\u95F4
+list.product.table.delistreason=\u4E0B\u67B6\u539F\u56E0
+
 
 detail.product.label.title=\u6d4f\u89c8\u4ea7\u54c1\u4fe1\u606f
 detail.product.label.productCategory=\u4ea7\u54c1\u5206\u7c7b
