--- a/WEB-INF/src/cn/com/bhh/erp/action/MainPageAction_zh_CN.properties
+++ b/WEB-INF/src/cn/com/bhh/erp/action/MainPageAction_zh_CN.properties
@@ -1,28 +1,29 @@
 mainPage=\u4e3b\u9875
-install.nowRepairCompanyName=\u59d4\u6258\u7ef4\u4fee\u516c\u53f8
-install.manufactureNo=\u5236\u9020\u53f7
-install.installDate=\u5b89\u88c5\u65e5
-install.customerName=\u5ba2\u6237
-install.installPlace=\u652f\u5e97\u540d
-install.model=\u673a\u578b
-install.useStatus=\u4f7f\u7528\u72b6\u6001
-install.affirm=\u786e\u8ba4\u72b6\u6001
-fault.managementId=\u6545\u969c\u4fe1\u606f\u7ba1\u7406\u7f16\u53f7
-fault.manufactureNo=\u5236\u9020\u53f7
-fault.customerName=\u5ba2\u6237
-fault.occurDate=\u53d1\u751f\u65e5\u671f
-fault.installPlace=\u5206\u5e97
-fault.model=\u673a\u578b
-fault.faultType=\u6545\u969c\u7c7b\u522b
-fault.repairState=\u72b6\u6001
-installApply.nowRepairCompanyName=\u59d4\u6258\u7ef4\u4fee\u516c\u53f8
-installApply.manufactureNo=\u5236\u9020\u53f7
-installApply.applyTypeName=\u7533\u8bf7\u5206\u7c7b
-installApply.applyerName=\u7533\u8bf7\u4eba
-installApply.applyDate=\u7533\u8bf7\u65e5\u671f
 unconfirmed=\u672a\u786e\u8ba4
 uncompleted=\u672a\u5b8c\u6210
-unconfirmInstallInfo=\u672a\u786e\u8ba4\u5b89\u88c5\u4fe1\u606f
-unconfirmFaultInfo=\u672a\u5b8c\u6210\u6545\u969c\u4fe1\u606f
-unconfirmInstallaApplyInfot=\u4ea7\u54c1\u4f7f\u7528\u60c5\u51b5\u53d8\u66f4\u7533\u8bf7\u4fe1\u606f
+underwayOrderInfo=\u672A\u5B8C\u6210\u8BA2\u5355  
+failedOrderInfo=\u5931\u8D25\u8BA2\u5355
+sucessOrderInfo=\u6210\u529F\u8BA2\u5355
+orderQuery=\u8BA2\u5355\u67E5\u8BE2
+order.phoneNo=\u7F34\u8D39\u53F7\u7801
+order.province=\u7701\u4EFD
+order.topupPhone=\u5145\u503C\u53F7\u7801
+order.price=\u91D1\u989D
+order.sysNo=\u7CFB\u7EDF\u8BA2\u5355\u53F7
+order.topupNo=\u5145\u503C\u8BA2\u5355\u53F7
+order.requestNo=\u8BF7\u6C42\u8BA2\u5355\u53F7
+order.createTime=\u63D0\u4EA4\u65F6\u95F4
+order.updateTime=\u66F4\u65B0\u65F6\u95F4
+order.status=\u72B6\u6001
+order.notify=\u901A\u77E5
+order.source=\u6765\u6E90
+order.proxy=\u6E20\u9053
+order.operator=\u8FD0\u8425\u5546
+order.salePrice=\u552E\u4EF7
+order.inPrice=\u8FDB\u4EF7
+order.profit=\u76C8\u5229
+order.startDate=\u5F00\u59CB\u65E5\u671F
+order.endDate=\u7ED3\u675F\u65E5\u671F
+
+
 
