--- a/WEB-INF/src/information_zh_CN.properties
+++ b/WEB-INF/src/information_zh_CN.properties
@@ -1,8 +1,7 @@
-hitache_in_china_url=http://www.hitachi.com.cn
-hitache_in_japan_url=http://www.hitachi.co.jp
-ihsc_label_url=http://www.ihsc.com.cn/
-hitache_in_china=\u65e5\u7acb\u4e2d\u56fd
-hitache_in_japan=\u65e5\u7acb\u88fd\u4f5c\u6240
+zkcl_url=http://www.bjzkcl.com/
+zkcl_tall_url=http://zkclcz.tmall.com/
+zkcl=\u4E2D\u79D1\u7545\u8FDE
+zkcl_tmall=\u4E2D\u79D1\u7545\u8FDE\u5145\u503C\u4E13\u8425\u5E97
 user_login_label=\u7528\u6237\u767b\u5f55
 ihsc_label=IHSC
 main_menu_company_label=\u516c\u53f8\u4fe1\u606f\u7ef4\u62a4
@@ -51,9 +50,21 @@ select_productCategory=\u9009\u62e9\u4ea7\u54c1\u5206\u7c7b
 select_osPermit=\u9009\u62e9OS\u8bb8\u53ef\u9879
 select_bank=\u9009\u62e9\u94f6\u884c
 select_faultMachineType=\u9009\u62e9\u6545\u969c\u673a\u5668\u673a\u79cd
+
+select_product_status=\u9009\u62E9\u72B6\u6001
+select_order_status=\u9009\u62E9\u8BA2\u5355\u72B6\u6001
+
 male=\u7537
 female=\u5973
 standard=\u6807\u51c6
+
+order.status.create=\u5F85\u5145\u503C
+order.status.underway=\u5145\u503C\u4E2D
+order.status.success=\u6210\u529F
+order.status.fail=\u5931\u8D25
+order.status.noticed=\u5DF2\u901A\u77E5
+order.status.notice=\u672A\u901A\u77E5
+
 
 select_all=\u5168\u9009
 un_select_all=\u53d6\u6d88\u5168\u9009
@@ -114,8 +125,8 @@ footer=Copyright (C) Beijing Hitachi Computer Service Center. 2008. All rights r
 welcome_msg=\u6b22\u8fce
 home_page=\u4e3b\u9875
 weekly_report=ATM\u6280\u672f\u652f\u63f4\u5468\u62a5
-product_label=\u4ea7\u54c1\u7ba1\u7406 
-product_category_tree_label= \u4ea7\u54c1\u5206\u7c7b\u6811 
+product_label=\u5546\u54C1\u7ba1\u7406 
+product_search_label= \u4ea7\u54c1\u5206\u7c7b\u6811 
 product_category_list_label=\u4ea7\u54c1\u5206\u7c7b\u5217\u8868
 import_use_situation_label=\u5bfc\u5165\u4f7f\u7528\u60c5\u51b5 
 explore_use_situation_label=\u6d4f\u89c8\u4f7f\u7528\u60c5\u51b5 
