--- a/WEB-INF/src/message_zh_CN.properties
+++ b/WEB-INF/src/message_zh_CN.properties
@@ -64,6 +64,7 @@ BSE01015=\u786e\u8ba4\u5bc6\u7801\u4e0d\u80fd\u4e3a\u7a7a
 BSE01016=\u8be5\u7528\u6237\u5df2\u4e0d\u80fd\u7f16\u8f91\u3002
 ##2009/08/25 add
 BSE01017=\u9009\u62e9\u7684\u7528\u6237\u7ec4\u6ca1\u6709\u7ba1\u7406\u5458\u6743\u9650\uff0c\u8bf7\u9009\u62e9\u516c\u53f8\uff01
+BSE01018=\u5F02\u5E38\u7528\u6237\u767B\u5F55
 
 ####country BSE01101~BSE01200
 BSE01101=\u56fd\u5bb6\u4fe1\u606f\u4e0d\u5b58\u5728\uff0c\u8bf7\u6dfb\u52a0\uff01
